# my-gpx

./: CMakeLists.txt  vcpkg.json
examples/: CMakeLists.txt  gpxpoint-example.cpp  regeo-example.cpp  timestamp-example.cpp
src/: CMakeLists.txt  config.hpp  flightsegment.cpp  flightsegment.hpp  gpxloader.cpp  gpxloader.hpp  gpxpoint.cpp  gpxpoint.hpp  gpxsegment.cpp  gpxsegment.hpp  linesegment.cpp  linesegment.hpp  regeo.cpp  regeo.hpp  segment.cpp  segment.hpp  utils.cpp  utils.hpp  validation.hpp
